probado bien, aunque a veces el server send event no manda el evento
